# face

./: .env.example  .gitignore  README.md  dev.ps1  main.py  pyproject.toml
models/: config.py  retinaface.py
src/: constants.py  inference.py  main.py
src/bytetrack/: byte_tracker.py  matching.py
src/inference/: retinaface.py
src/models/: arcface.py  retinaface.py
src/process/: __init__.py  candidates.py  capture.py  detection.py  face_candidates.py  face_detection.py  face_recognition.py  gui.py  recognition.py
src/utils/: arcface.py  paint.py  qdrant.py  retinaface.py
testbench/: aiVoiceGen.ipynb  create_engine.ipynb  qdrantInsertPerson.ipynb  testArcTensorRT.ipynb  testByteTrack.ipynb  testMP.py  testRetinaTensorRT.ipynb  testarcface.ipynb  testretinaface.ipynb
utils/: retinaface.py  utils.py
